--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "bsa-patterns-hw",
   "version": "0.0.0",
   "description": "Starter for Patterns Practises and Principles homework. Binary Studio Academy",
-  "scripts": {},
+  "scripts": {
+    "start-server": "npm start -w server",
+    "start-client": "npm start -w client",
+    "start": "npm-run-all --parallel start-server start-client"
+  },
   "author": "Vitalii Yarmus",
   "license": "MIT",
   "workspaces": [
@@ -14,15 +18,13 @@
     "npm": ">=8 <9"
   },
   "devDependencies": {
-    "eslint": "^9.8.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react": "^7.35.0",
     "globals": "^15.8.0",
     "prettier": "^3.3.3",
     "typescript": "4.9.5",
     "typescript-eslint": "^7.17.0"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^7.17.0"
+    "@typescript-eslint/eslint-plugin": "^7.17.0",
+    "concurrently": "^8.2.2"
   }
 }
