--- a/package.json
+++ b/package.json
@@ -13,7 +13,14 @@
     "client",
     "server"
   ],
+  "engines": {
+    "node": ">=16 <17",
+    "npm": ">=8 <9"
+  },
   "devDependencies": {
+    "eslint": "^9.8.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react": "^7.35.0",
     "globals": "^15.8.0",
     "prettier": "^3.3.3",
     "typescript": "4.9.5",
